--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,17 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://your-railway-app-url.railway.app/api/:path*"
+      "destination": "https://taskflowx-backend-production.up.railway.app/api/:path*",
+      "has": [
+        {
+          "type": "cookie",
+          "key": "session"
+        }
+      ]
+    },
+    {
+      "source": "/api/:path*",
+      "destination": "https://taskflowx-backend-production.up.railway.app/api/:path*"
     }
   ],
   "headers": [
@@ -10,7 +20,7 @@
       "source": "/api/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Origin", "value": "https://taskflowx.vercel.app" },
         { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization" }
       ]
