--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,6 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://taskflowx-backend-production.up.railway.app/api/:path*",
-      "has": [
-        {
-          "type": "cookie",
-          "key": "session"
-        }
-      ]
-    },
-    {
-      "source": "/api/:path*",
       "destination": "https://taskflowx-backend-production.up.railway.app/api/:path*"
     }
   ],
@@ -22,7 +12,7 @@
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "https://taskflowx-frontend-6cut.vercel.app" },
         { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization" }
+        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization, Cookie" }
       ]
     }
   ]
